# CampusLifeSimulator

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CampusLifeSimulator_Final_Report.docx  CampusLifeSimulator_Project_Proposal.docx  Dockerfile  GAME_OPERATIONS.md  README.md  docker-compose.yml  event_attribute_matrix.xlsx  moyoulingsen-启动方式.md  plan.md  requirements.txt  vcpkg.json
assets/: 音效
assets/config/: hidden_variables.json  library.json  meals.json  quests.json  scene_transitions.json
assets/config/events/: cafeteria.json  campus.json  class_attendance.json  club_chain.json  dormitory.json  endings.json  friend_help_chain.json  gym.json  innovation_chain.json  library.json  store.json  titles.json
assets/config/interiors/: cafeteria.json  classroom.json  dormitory.json  gym.json  library.json  store.json
assets/fonts/: README.md
assets/image/tilesets/: pixlab24_objects_55857.html  pixlab24_tileset_55764.html
assets/locales/: en.json  zh.json
assets/maps/: morning_rush_dorm.tmx
assets/maps/morning_rush_green/: green_zone.tsx  morning_rush_stage_1.tmx  morning_rush_stage_2.tmx  morning_rush_stage_3.tmx
assets/sprites/parkour/pixel_adventure/: README_SOURCE.md
assets/sprites/parkour/school/: README_SOURCE.md
assets/sprites/player/morning_rush_student/: student_actions_manifest.txt
assets/tilesets/: pixlab24_tileset_55830.html
docs/: events_schema.md  hidden_variables_schema.md  数据说明.md  校园生活模拟器——属性、隐藏变量与结局设计.md
log/: 6.7.md  6.8.0.md  6.8.1.md
plan/: person1_event_content_plan_v2(1).md  时间覆盖表.xlsx  校园生活模拟器 AI 编程事件规范（主文档）.md  校园生活模拟器 AI 编程事件规范（附录速查）.md  校园生活模拟器——属性、隐藏变量与结局设计.md
src/: main.cpp
src/app/: Application.cpp  GameState.h  InputHandler.cpp  InputHandler.h
src/audio/: AudioManager.h
src/combat/: CombatSystem.cpp  CombatSystem.h
src/config/: MealConfig.h  SceneConfig.h
src/core/: ActivityRunner.h  AssetPath.cpp  CharacterState.h  CombatResult.h  CombatSystem.cpp  GameApp.cpp  GameApp.h  GameContext.h  GameSession.cpp  GameSession.h  GameSettings.cpp  GameSettings.h  HiddenVariableConfig.h  LibraryConfig.h  Localization.cpp  Localization.h  Log.h  MealConfig.h  RandomEvent.cpp  SceneConfig.h  SceneTransition.h  SettlementResolver.cpp  SettlementResolver.h  SleepSystem.h  TextUtils.h  TimeSkipFlash.h  TimeSystem.cpp  TimeSystem.h  Types.h  WindowScaler.cpp
src/entity/: Character.cpp  Character.h  CombatHelper.h  Enemy.cpp  Enemy.h  Entity.h  Player.cpp  Player.h  Student.cpp  Student.h
src/event/: EventRunner.cpp  EventRunner.h  EventTypes.h  RandomEvent.cpp  RandomEvent.h
src/fileio/: ConfigManager.cpp  ConfigManager.h  FileManager.cpp  FileManager.h  JsonFileManager.cpp  JsonFileManager.h  SaveManager.cpp  SaveManager.h
src/game/: Game.cpp  Game.h
src/interaction/: CafeteriaInteraction.cpp  CafeteriaInteraction.h  ClassroomInteraction.cpp  ClassroomInteraction.h  DormitoryInteraction.cpp  DormitoryInteraction.h  GymInteraction.cpp  GymInteraction.h  LibraryInteraction.cpp  LibraryInteraction.h  RegularInteraction.cpp  RegularInteraction.h
src/map/: BuildingInterior.cpp  BuildingInterior.h  CafeteriaInterior.cpp  CafeteriaInterior.h  CampusMap.cpp  CampusMap.h  ClassroomInterior.cpp  ClassroomInterior.h  ConvenienceStoreInterior.cpp  ConvenienceStoreInterior.h  DormitoryInterior.cpp  DormitoryInterior.h  GymInterior.cpp  GymInterior.h  LibraryInterior.cpp  LibraryInterior.h  MapPortal.h
src/minigame/: MorningRushGame.cpp  MorningRushGame.h  MorningRushLevel.cpp  MorningRushLevel.h  MorningRushRenderer.cpp  MorningRushRenderer.h  PlatformerCollisionWorld.cpp  PlatformerCollisionWorld.h  PlatformerController.cpp  PlatformerController.h
src/quest/: ExamQuest.cpp  ExamQuest.h  FinalExamQuest.cpp  FinalExamQuest.h  MainQuest.cpp  MainQuest.h  MidtermExamQuest.cpp  MidtermExamQuest.h  QuestManager.cpp  QuestManager.h  SimpleQuest.cpp  SimpleQuest.h
src/screens/: GamePlayScreen.cpp  GamePlayScreen.h  MenuScreens.cpp  MenuScreens.h  SceneTransitionScreen.cpp  SceneTransitionScreen.h  Screen.h
src/state/: CanteenGameState.cpp  CanteenGameState.h  CombatState.cpp  CombatState.h  DiceGameState.cpp  DiceGameState.h  EventDialogState.cpp  EventDialogState.h  ExplorationState.cpp  ExplorationState.h  GameState.h  MainQuestState.cpp  MainQuestState.h  MiniGameState.cpp  MiniGameState.h
src/ui/: ActivityNotice.h  ChoicePrompt.h  DebugSandboxPanel.cpp  DebugSandboxPanel.h  DialogBox.cpp  DialogBox.h  DifficultyPanel.cpp  DifficultyPanel.h  EntityDemoPage.cpp  EntityDemoPage.h  HUD.cpp  HUD.h  HelpPanel.cpp  HelpPanel.h  ModalBox.cpp  ModalBox.h  QuestManagerDemoPage.cpp  QuestManagerDemoPage.h  QuestPanel.cpp  QuestPanel.h  SceneBackground.cpp  SceneBackground.h  SettingsPanel.cpp  SettingsPanel.h  TguiContext.cpp  TguiContext.h  TguiTheme.h  TimePanel.cpp  TimePanel.h  TitleScreen.cpp  TitleScreen.h  UIComponent.h
src/utils/: AssetPath.cpp  AssetPath.h  WindowScaler.cpp  WindowScaler.h
tools/: create_green_zone_maps.py  prepare_morning_rush_assets.py
